# CliffordIR

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/clifford/Dialect/: CMakeLists.txt
include/clifford/Dialect/Clifford/IR/: CMakeLists.txt  CliffAttrDefs.td  CliffDialect.td  CliffOps.td  CliffTypes.h  CliffTypes.td  Dialect.h
lib/Dialect/Clifford/IR/: CMakeLists.txt  CliffOps.cpp  CliffTypes.cpp  Dialect.cpp
test/Clifford/: cliff_sintax.mlir
